fix:(Добавлена поддержка тома папки домена, чтоб можно было сохранять настройки пользователей и пере-деплоить приложение )

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@ db_data/**
 mySQL/Dump.sql
 
 # production glassfish domain backup
-glassfish/backups/domain1.zip*
+glassfish/backups/domain1
 glassfish/glassfish4.zip*
