--- a/CRM.service
+++ b/CRM.service
@@ -1,5 +1,6 @@
 [Unit]
-  Description=CRM&contractsBase  
+  Description=CRM&contractsBase
+    
  
 [Service]
   ExecStart=/bin/bash /usr/local/bin/crm_start.sh
@@ -13,4 +14,5 @@
   Restart=on-failure
  
 [Install]
-  WantedBy=multiuser.target
+  WantedBy=multi-user.target
+  
